[CPU] Switch CPUDoubleTilingExpert pipeline to use IREE::CPU::LoweringConfigAttr. (#21354)
The revision switches all the dispatches that use
`CPUDoubleTilingExpert` to `IREE::CPU::LoweringConfigAttr`, which is a
root-based tiling approach. There are two commits in the revision:

- [The switch for `linalg.matmul`
dispatches](https://github.com/iree-org/iree/pull/21354/commits/e885e86e5a87db048afc278a49fdc5f4f8378f58):
it mainly focuses on the lowering config changes.
- [The switch for `linalg.generic`
dispatches](https://github.com/iree-org/iree/pull/21354/commits/48a527f4398f04d225f6f6a6d339a42196b7c21d):
  - Changes for lowering configs.
  - Update the pipeline that enumerates all the tiling levels.
- Update `LLVMCPU2DScalableTo1DScalable` pass to use
`IREE::CPU::LoweringConfigAttr`.

The pipeline and lowering config verification only applies on the root
op because CPUDoubleTilingExpert expects exactly four levels of tiling.
After the switch, only the root op has four levels of tiling. We will
need to refresh the verification logic anyway, as they are legacy code
and it is easier to have better implementation today. So it will be
refreshed in a follow-up.

New known issues:
- Trailing vector unit dims are not folded away in the root-op based
pipeline, which results in larger binary sizes. Because they are
unrolled: https://github.com/iree-org/iree/issues/21420

---------

Signed-off-by: hanhanW <hanhan0912@gmail.com>

--- a/compiler/src/iree/compiler/Codegen/LLVMCPU/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/LLVMCPU/CMakeLists.txt
@@ -135,6 +135,7 @@ iree_cc_library(
     MLIRSCFUtils
     MLIRTensorDialect
     MLIRTensorTransforms
+    MLIRTilingInterface
     MLIRTosaDialect
     MLIRTosaToArith
     MLIRTransformDialect
