[HAL] Add hal.allocator.resolve_memory_properties (#21115)
Progress towards: https://github.com/iree-org/iree/issues/20856

Adds a new operation `hal.allocator.resolve_memory_properties` and a
pass that tries to resolve it using the topology attribute. The same
pass should aim to do the same thing for the `hal.allocator.select` op
in a follow up.

---------

Signed-off-by: default <ziereis@roofline.ai>
Signed-off-by: Thomas Ziereis <ziereis@roofline.ai>

--- a/compiler/src/iree/compiler/Dialect/HAL/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/HAL/Transforms/BUILD.bazel
@@ -48,6 +48,7 @@ iree_compiler_cc_library(
         "ResolveDeviceAliases.cpp",
         "ResolveDevicePromises.cpp",
         "ResolveExportOrdinals.cpp",
+        "ResolveTopologyQueries.cpp",
         "SerializeExecutables.cpp",
         "StripExecutableContents.cpp",
         "SubstituteExecutables.cpp",
@@ -66,6 +67,7 @@ iree_compiler_cc_library(
         "//compiler/src/iree/compiler/Dialect/HAL/Conversion/HALToHAL",
         "//compiler/src/iree/compiler/Dialect/HAL/Conversion/StandardToHAL",
         "//compiler/src/iree/compiler/Dialect/HAL/Conversion/StreamToHAL",
+        "//compiler/src/iree/compiler/Dialect/HAL/Conversion/StreamToHAL:Utils",
         "//compiler/src/iree/compiler/Dialect/HAL/Conversion/UtilToHAL",
         "//compiler/src/iree/compiler/Dialect/HAL/IR",
         "//compiler/src/iree/compiler/Dialect/HAL/IR:HALDialect",
