[Dispatch Creation] Run multi-use fusion after forming dispatches (#21524)
This helps to simplify the IR to avoid some cases that the GPU backend
can't handle when multi-use fusion is disabled before forming
dispatches.

Signed-off-by: Ian Wood <ianwood@u.northwestern.edu>

--- a/compiler/src/iree/compiler/DispatchCreation/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/DispatchCreation/test/BUILD.bazel
@@ -40,6 +40,7 @@ iree_lit_test_suite(
             "fuse_encoding_ops_into_dispatch_regions.mlir",
             "fuse_horizontal_contractions.mlir",
             "fuse_multiuse_elementwise_producer.mlir",
+            "fuse_multiuse_intra_dispatch.mlir",
             "fusion_preprocessing.mlir",
             "materialize_default_workgroup_count_region.mlir",
             "pad_fusion_with_consumer.mlir",
