[LLVMGPU][Codegen] Set FMF for arith.mulf + arith.addf -> math.fma (#21528)
This patch sets fast math flags to `arith.mulf + arith.addf` to utilize
`upliftToFMA` and emit `math.fma` in their place. The intention behind
this is to teach the compiler to recognize this pattern and subsequently
enable optimizations with respect to `vector.multi_reduction(fma)` via
e.g chaining fmas.

Issue: #21483

---------

Signed-off-by: Eric Feng <Eric.Feng@amd.com>
Co-authored-by: Jakub Kuderski <kubakuderski@gmail.com>

--- a/compiler/src/iree/compiler/Codegen/LLVMGPU/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/LLVMGPU/BUILD.bazel
@@ -198,6 +198,7 @@ iree_compiler_cc_library(
         "@llvm-project//mlir:MathDialect",
         "@llvm-project//mlir:MathToLLVM",
         "@llvm-project//mlir:MathToROCDL",
+        "@llvm-project//mlir:MathTransforms",
         "@llvm-project//mlir:MemRefDialect",
         "@llvm-project//mlir:MemRefToLLVM",
         "@llvm-project//mlir:MemRefTransforms",
