[Codegen][e2e testing] Add regression tests of matvec with dynamic reduction (#21538)
Adds a new test file for e2e hip backend testing, called
'linalg_ops_dynamic.mlir'. Name choice: we probably want these e2e .mlir
files to contain many MLIR functions, to better utilize MLIR parallel
compilation, so this file can be used for different such test functions
in the future.

Note: No CPU testing here, only GPU. CPU would be nice, but I was hitting 
a Global ISEL RISC-V error that I chose to not to investigate further. 

---------

Signed-off-by: James Newling <james.newling@gmail.com>

--- a/tests/e2e/regression/BUILD.bazel
+++ b/tests/e2e/regression/BUILD.bazel
@@ -141,6 +141,7 @@ iree_check_single_backend_test_suite(
 iree_check_single_backend_test_suite(
     name = "check_regression_hip",
     srcs = [
+        "linalg_ops_dynamic.mlir",
         "split_reduction_using_tiling.mlir",
     ],
     compiler_flags = [
