[CPU][DT] Implement data layout propagation for CPU dispatches. (#21554)
The revision implements a specialized propagation pattern for
`tensor.collapse_shape->linalg.unpack`, if the packed dimension and the
corresponding inner dimension are collapsed.

In the data layout propagation, we also populate patterns that sink down
tensor.collapse_shape across `linalg.generic` ops. Because how we
materialize matvec in CPU backends is converting it to
`linalg.mmt4d->tensor.collapse_shape` op chain.

At the end, the pass folds the reshapes into bindings.

Fixes https://github.com/iree-org/iree/issues/21180

---------

Signed-off-by: hanhanW <hanhan0912@gmail.com>

--- a/compiler/src/iree/compiler/Codegen/Common/CPU/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/CPU/BUILD.bazel
@@ -51,6 +51,7 @@ iree_compiler_cc_library(
     srcs = [
         "CPULowerToUKernels.cpp",
         "CPUPrepareUkernels.cpp",
+        "CPUPropagateDataLayout.cpp",
         "Passes.cpp",
     ],
     hdrs = [
@@ -78,6 +79,7 @@ iree_compiler_cc_library(
         "@llvm-project//mlir:BufferizationDialect",
         "@llvm-project//mlir:BufferizationInterfaces",
         "@llvm-project//mlir:DestinationStyleOpInterface",
+        "@llvm-project//mlir:DialectUtils",
         "@llvm-project//mlir:FuncDialect",
         "@llvm-project//mlir:FunctionInterfaces",
         "@llvm-project//mlir:IR",
