--- a/compiler/src/iree/compiler/Codegen/Common/CPU/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/CPU/test/BUILD.bazel
@@ -21,6 +21,7 @@ iree_lit_test_suite(
         [
             "lower_to_ukernel_ops.mlir",
             "prepare_ukernels.mlir",
+            "propagate_data_layout.mlir",
         ],
         include = ["*.mlir"],
     ),
