[Codegen][VectorDistribute] Add pattern to distribute poison (#21573)
Essentially the same as the pattern to distribute constants.

Also removes some unused headers from touched file.

---------

Signed-off-by: James Newling <james.newling@gmail.com>

--- a/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
@@ -85,6 +85,7 @@ iree_compiler_cc_library(
         "@llvm-project//mlir:DialectUtils",
         "@llvm-project//mlir:IR",
         "@llvm-project//mlir:SCFDialect",
+        "@llvm-project//mlir:UBDialect",
         "@llvm-project//mlir:VectorDialect",
     ],
 )
