--- a/tests/e2e/linalg/CMakeLists.txt
+++ b/tests/e2e/linalg/CMakeLists.txt
@@ -15,6 +15,7 @@ iree_check_single_backend_test_suite(
     check_llvm-cpu_local-task
   SRCS
     "conv2d.mlir"
+    "fp4_f32_conversion.mlir"
     "fp_to_subbyte.mlir"
     "narrow_n_matmuls.mlir"
     "pack.mlir"
