--- a/compiler/src/iree/compiler/Codegen/Common/GPU/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/GPU/BUILD.bazel
@@ -92,6 +92,7 @@ iree_compiler_cc_library(
         "GPUTensorTile.cpp",
         "GPUTensorTileToSerialLoops.cpp",
         "GPUTile.cpp",
+        "GPUTileAndConvertConvToMatmul.cpp",
         "GPUTileReduction.cpp",
         "GPUVectorAlloc.cpp",
         "GPUVectorDistribution.cpp",
