--- a/compiler/src/iree/compiler/Codegen/Common/GPU/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Common/GPU/CMakeLists.txt
@@ -85,6 +85,7 @@ iree_cc_library(
     "GPUTensorTile.cpp"
     "GPUTensorTileToSerialLoops.cpp"
     "GPUTile.cpp"
+    "GPUTileAndConvertConvToMatmul.cpp"
     "GPUTileReduction.cpp"
     "GPUVectorAlloc.cpp"
     "GPUVectorDistribution.cpp"
