--- a/compiler/src/iree/compiler/Codegen/Common/GPU/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/GPU/test/BUILD.bazel
@@ -55,6 +55,7 @@ iree_lit_test_suite(
             "gpu_tensor_alloc.mlir",
             "gpu_tensor_tile.mlir",
             "gpu_tile.mlir",
+            "gpu_tile_and_convert_conv_to_matmul.mlir",
             "gpu_tile_reduction.mlir",
             "gpu_vector_alloc.mlir",
             "gpu_vector_distribution.mlir",
