[docs] Add documentation for updating golden outputs (#21641)
This PR documents the process for updating the golden outputs and
verifying them with the accuracy script.

---------

Signed-off-by: Eric Feng <Eric.Feng@amd.com>

--- a/docs/website/mkdocs.yml
+++ b/docs/website/mkdocs.yml
@@ -260,6 +260,7 @@ nav:
           - "developers/design-docs/vm.md"
       - "Other topics":
           - "developers/usage-best-practices.md"
+          - "developers/update-sdxl-golden-outputs.md"
           - "developers/vulkan-environment-setup.md"
   - "Community":
       - "community/index.md"
