--- a/runtime/pyproject.toml
+++ b/runtime/pyproject.toml
@@ -6,5 +6,6 @@ requires = [
     "ninja",
     "numpy>=2.0.0b1",
     "packaging",
+    "ml_dtypes>=0.5.1",
 ]
 build-backend = "setuptools.build_meta"
