[LLVMCPU] Tracks the dimension mapping for multi lowering config (#21649)
This adds `IterationDimTracker` to determine dimension mappings both
within individual operations and across multiple operations.

The tracker assigns a global dimension index to all loop dimensions
encountered (where “local” refers to an individual operation and
“global” refers to all target operations). By analyzing
producer-consumer relationships of SSA values, dimensions that are
considered equivalent are assigned the same global dimension index.

It is currently used to improve lowering configuration propagation by
identifying loop dimensions that are common across all target
operations.

---------

Signed-off-by: Yu-Zhewen <zhewenyu@amd.com>

--- a/compiler/src/iree/compiler/Codegen/LLVMCPU/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/LLVMCPU/CMakeLists.txt
@@ -114,6 +114,7 @@ iree_cc_library(
     MLIRFunctionInterfaces
     MLIRIR
     MLIRIndexToLLVM
+    MLIRIndexingMapOpInterface
     MLIRLLVMCommonConversion
     MLIRLLVMDialect
     MLIRLinalgDialect
