[Codegen][LLVMGPU] Config tests for matmuls  (#21697)
Add some tests for checking the pipeline that's chosen for different
matmuls.

Note: The pipeline selected can depend on whether a linalg op is in
generalized or specialized (not good!). There aren't many places where
specialized ops are matched, I see just 1 MatmulOp, 1 BatchMatmulOp (and
1 ReduceOp) in the logic. This PR doesn't remove these yet, just
demonstrates the current state in lit tests, and leaves some TODOs to
clean up.

The small C++ change in this PR allows for nice compact IR to be run
through the iree-llvmgpu-select-lowering-strategy without hitting an
assertion failure (see
https://github.com/iree-org/iree/pull/21647#pullrequestreview-3107751319)

---------

Signed-off-by: James Newling <james.newling@gmail.com>

--- a/compiler/src/iree/compiler/Codegen/LLVMGPU/test/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/LLVMGPU/test/CMakeLists.txt
@@ -20,6 +20,7 @@ iree_lit_test_suite(
     "cast_type_to_fit_mma.mlir"
     "config_custom_op.mlir"
     "config_horizontally_fused_ops.mlir"
+    "config_matmul.mlir"
     "config_matvec.mlir"
     "config_root_op_attribute.mlir"
     "config_sort.mlir"
