Expose loops transforms through python api (#21710)
Signed-off-by: Ivan Butygin <ivan.butygin@gmail.com>

--- a/compiler/bindings/python/CMakeLists.txt
+++ b/compiler/bindings/python/CMakeLists.txt
@@ -234,6 +234,7 @@ set(_SOURCE_COMPONENTS
   MLIRPythonSources.Dialects.transform.interpreter
   MLIRPythonSources.Dialects.vector
   MLIRPythonSources.Dialects.vector_transform
+  MLIRPythonSources.Dialects.loop_transform
 
   # iree-dialects project.
   IREEDialectsPythonSources
