Adding iree_hal_executable_export_info_t and queries. This allows some basic reflection of export information and lookup by name. Implemented for now only in the executable_library impls.

--- a/runtime/src/iree/hal/drivers/amdgpu/cts/CMakeLists.txt
+++ b/runtime/src/iree/hal/drivers/amdgpu/cts/CMakeLists.txt
@@ -45,6 +45,8 @@ iree_hal_cts_test_suite(
     "command_buffer_update_buffer"
     # HAL event is unimplemented for now.
     "event"
+    # TODO: implement executable reflection.
+    "executable"
     "file"
   LABELS
     driver=amdgpu
