--- a/runtime/src/iree/hal/cts/CMakeLists.txt
+++ b/runtime/src/iree/hal/cts/CMakeLists.txt
@@ -15,6 +15,7 @@ set(IREE_ALL_CTS_TESTS
   "command_buffer_update_buffer"
   "driver"
   "event"
+  "executable"
   "executable_cache"
   "file"
   "queue_host_call"
@@ -29,6 +30,7 @@ set(IREE_ALL_CTS_TESTS
 set(IREE_EXECUTABLE_CTS_TESTS
   "command_buffer_dispatch"
   "command_buffer_dispatch_constants"
+  "executable"
   "executable_cache"
   PARENT_SCOPE
 )
@@ -38,6 +40,7 @@ set(IREE_ALL_CTS_EXECUTABLE_SOURCES
   "command_buffer_dispatch_test"
   "command_buffer_dispatch_constants_test"
   "executable_cache_test"
+  "executable_test"
   PARENT_SCOPE
 )
 
@@ -189,6 +192,19 @@ iree_cc_library(
     executable_cache_test_library
   HDRS
     "executable_cache_test.h"
+  DEPS
+    ::cts_test_base
+    iree::base
+    iree::hal
+    iree::testing::gtest
+  TESTONLY
+)
+
+iree_cc_library(
+  NAME
+    executable_test_library
+  HDRS
+    "executable_test.h"
   DEPS
     ::cts_test_base
     iree::base
