--- a/runtime/src/iree/hal/drivers/null/CMakeLists.txt
+++ b/runtime/src/iree/hal/drivers/null/CMakeLists.txt
@@ -42,6 +42,8 @@ iree_cc_library(
     iree::hal
     iree::hal::utils::file_transfer
     iree::hal::utils::files
+    iree::hal::utils::queue_emulation
+    iree::hal::utils::queue_host_call_emulation
     iree::hal::utils::semaphore_base
   PUBLIC
 )
