--- a/runtime/src/iree/hal/drivers/null/BUILD.bazel
+++ b/runtime/src/iree/hal/drivers/null/BUILD.bazel
@@ -45,6 +45,8 @@ iree_runtime_cc_library(
         "//runtime/src/iree/hal",
         "//runtime/src/iree/hal/utils:file_transfer",
         "//runtime/src/iree/hal/utils:files",
+        "//runtime/src/iree/hal/utils:queue_emulation",
+        "//runtime/src/iree/hal/utils:queue_host_call_emulation",
         "//runtime/src/iree/hal/utils:semaphore_base",
     ],
 )
