--- a/runtime/src/iree/hal/drivers/vulkan/CMakeLists.txt
+++ b/runtime/src/iree/hal/drivers/vulkan/CMakeLists.txt
@@ -77,6 +77,8 @@ iree_cc_library(
     iree::hal::utils::executable_debug_info
     iree::hal::utils::file_transfer
     iree::hal::utils::files
+    iree::hal::utils::queue_emulation
+    iree::hal::utils::queue_host_call_emulation
     iree::hal::utils::resource_set
     iree::hal::utils::semaphore_base
     iree::schemas::executable_debug_info_c_fbs
