[ConstEval] Do not jit parameterized flow.tensor.constants (#21748)
Before, we accepted stream.parameter.named attributes as util.global ops
from the frontend. After we switched to flow.parameter.named ops, some
parameters are now inlined as flow.tensor.constants. Before this patch,
const eval did not treat these ops as parameterized and was trying to
const eval runtime dependent values, which is not possible.

--- a/compiler/src/iree/compiler/ConstEval/CMakeLists.txt
+++ b/compiler/src/iree/compiler/ConstEval/CMakeLists.txt
@@ -49,6 +49,7 @@ iree_cc_library(
     MLIRFunctionInterfaces
     MLIRIR
     MLIRPass
+    iree::compiler::Dialect::Flow::IR
     iree::compiler::Dialect::HAL::Target
     iree::compiler::Dialect::Util::Analysis::Constant
     iree::compiler::Dialect::Util::IR
