--- a/runtime/src/iree/hal/drivers/amdgpu/util/CMakeLists.txt
+++ b/runtime/src/iree/hal/drivers/amdgpu/util/CMakeLists.txt
@@ -81,7 +81,6 @@ iree_cc_library(
     util
   HDRS
     "affinity.h"
-    "bitmap.h"
     "block_pool.h"
     "device_library.h"
     "error_callback.h"
@@ -89,7 +88,6 @@ iree_cc_library(
     "kfd.h"
     "vmem.h"
   SRCS
-    "bitmap.c"
     "block_pool.c"
     "device_library.c"
     "info.c"
@@ -100,25 +98,12 @@ iree_cc_library(
     ::topology
     iree::base
     iree::base::internal
+    iree::base::internal::bitmap
     iree::base::internal::synchronization
     iree::base::internal::threading
     iree::hal::drivers::amdgpu::device::binaries
     iree::hal::drivers::amdgpu::device::headers
   PUBLIC
-)
-
-iree_cc_test(
-  NAME
-    bitmap_test
-  SRCS
-    "bitmap_test.cc"
-  DEPS
-    ::util
-    iree::base
-    iree::testing::gtest
-    iree::testing::gtest_main
-  GROUP
-    "iree-hal-drivers-amdgpu-tests"
 )
 
 iree_cc_test(
