Supporting iree_hal_executable_cache_infer_format in GPU targets. All the GPU targets currently use flatbuffer wrappers and this uses the new header prefix to support them.
This is a breaking change to compiled GPU executables.

Fixes #21752.

--- a/experimental/webgpu/CMakeLists.txt
+++ b/experimental/webgpu/CMakeLists.txt
@@ -48,6 +48,7 @@ iree_cc_library(
     iree::hal
     iree::experimental::webgpu::platform
     iree::experimental::webgpu::shaders
+    iree::hal::utils::executable_header
     iree::hal::utils::file_transfer
     iree::hal::utils::files
     iree::hal::utils::queue_emulation
