--- a/runtime/src/iree/hal/drivers/hip/CMakeLists.txt
+++ b/runtime/src/iree/hal/drivers/hip/CMakeLists.txt
@@ -69,6 +69,7 @@ iree_cc_library(
     iree::hal::utils::collective_batch
     iree::hal::utils::executable_debug_info
     iree::hal::utils::deferred_command_buffer
+    iree::hal::utils::executable_header
     iree::hal::utils::file_transfer
     iree::hal::utils::files
     iree::hal::utils::queue_emulation
