--- a/experimental/streaming/BUILD.bazel
+++ b/experimental/streaming/BUILD.bazel
@@ -27,6 +27,7 @@ iree_runtime_cc_library(
         "memory.c",
         "module.c",
         "peer.c",
+        "registry.c",
         "stream.c",
     ],
     hdrs = [
