--- a/runtime/src/iree/hal/drivers/hip/CMakeLists.txt
+++ b/runtime/src/iree/hal/drivers/hip/CMakeLists.txt
@@ -51,7 +51,7 @@ iree_cc_library(
     "rccl_channel.h"
     "stream_command_buffer.c"
     "stream_command_buffer.h"
-  INCLUDES
+  SYSTEM_INCLUDES
     "${HIP_API_HEADERS_ROOT}"
   DEPS
     ::dynamic_symbols
