Adding the iree-encode-parameters tool. This is a tool designed to run the parameter encoder modules produced from the SplitParameterEncoderPass. Though the modules are normal IREE programs they have a bunch of metadata to aid in a more ergonomic tool, automation (as we get into multi-targeting/retargeting of encodings), and handling the two-stage initialization.
The tool currently bails on multi-targeting and double creates contexts.
Future improvements can finish the compiler->tool->runtime target detection
and selection logic. The parameters module will need to be reworked to allow
new parameter providers to be registered (here the input/output files) after
the context has been created in order to avoid the double creates.

--- a/tests/e2e/parameters/BUILD.bazel
+++ b/tests/e2e/parameters/BUILD.bazel
@@ -16,6 +16,7 @@ iree_lit_test_suite(
     name = "lit",
     srcs = enforce_glob(
         [
+            "encode_parameters.mlir",
             "export_parameters.mlir",
             "generate_splat_archive.mlir",
         ],
@@ -29,6 +30,7 @@ iree_lit_test_suite(
     tools = [
         "//tools:iree-compile",
         "//tools:iree-dump-parameters",
+        "//tools:iree-encode-parameters",
         "//tools:iree-run-module",
         "@llvm-project//llvm:FileCheck",
     ],
