--- a/tools/BUILD.bazel
+++ b/tools/BUILD.bazel
@@ -155,6 +155,27 @@ iree_runtime_cc_binary(
 )
 
 iree_runtime_cc_binary(
+    name = "iree-encode-parameters",
+    srcs = ["iree-encode-parameters-main.c"],
+    deps = [
+        "//runtime/src/iree/base",
+        "//runtime/src/iree/base/internal:flags",
+        "//runtime/src/iree/hal",
+        "//runtime/src/iree/io:file_handle",
+        "//runtime/src/iree/io:parameter_index",
+        "//runtime/src/iree/io:parameter_index_provider",
+        "//runtime/src/iree/io:scope_map",
+        "//runtime/src/iree/io:stream",
+        "//runtime/src/iree/io/formats/irpa",
+        "//runtime/src/iree/modules/hal",
+        "//runtime/src/iree/tooling:context_util",
+        "//runtime/src/iree/tooling:function_util",
+        "//runtime/src/iree/tooling:parameter_util",
+        "//runtime/src/iree/vm",
+    ],
+)
+
+iree_runtime_cc_binary(
     name = "iree-fatelf",
     srcs = ["iree-fatelf.c"],
     deps = [
