--- a/compiler/src/iree/compiler/GlobalOptimization/Interfaces/CMakeLists.txt
+++ b/compiler/src/iree/compiler/GlobalOptimization/Interfaces/CMakeLists.txt
@@ -34,6 +34,8 @@ iree_cc_library(
     LLVMSupport
     MLIRArithDialect
     MLIRIR
+    iree::compiler::Dialect::Encoding::IR
+    iree::compiler::Dialect::Encoding::Utils
     iree::compiler::Dialect::Flow::IR
     iree::compiler::Dialect::TensorExt::IR
     iree::compiler::Dialect::Util::IR
