[TensorExt] Add Operations/Attributes/Interfaces for specifying ragged tensors.
This commit adds an operation that can be used to specify ragged
dimensions of a tensor. This is done through use of a new attribute
`RaggedTensorAttr` which can be used as an encoding attribute for a
`RankedTensorType`. The attribute specifies which dimension of the
result represents the "rows" of ragged tensors, i.e. if the n-th
dimensions of a tensor is specified as ragged than the n+1-th
dimension of the tensor has dimensions that are not equal, and n-th
dimension represents the number of such "columns". The n-th dimension
is refered to as the `raggedRow` and the n+1-th dimension is refered to
as a `raggedColumn`.

The commit also adds an operation `cast_to_ragged_shape` that takes a
source and allows specifying any dimension of the source
`tensor/memref` as the linearized `raggedRow` and `raggedColumn`
dimensions of the result tensor.

See documentation of `RaggedTensorAttr` and `CastToRaggedShape` for
more details.

The commit also adds a `SparseTensorAttrInterface` and
`SparseOpInterface`. Currently this is just a stub with
`RaggedTensorAttr` implementing the `SparseTensorAttrInterface` and
the `CastToRaggedTensor` implementing the
`SparseOpInterface`. Since sparsity could be expressed in any
form, it is expected that the transformations used these interfaces to
interpret the nature of sparsity as needed while the actual details of
the sparsity implemented by operations/attributes are behind the
interface. For now these attributes dont have any methods, but will be
populated as the operations/attributes implemented here are lowered
through the compilation pipeline.

Signed-off-by: MaheshRavishankar <mahesh.ravishankar@gmail.com>

--- a/compiler/src/iree/compiler/Dialect/TensorExt/IR/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/TensorExt/IR/BUILD.bazel
@@ -17,7 +17,9 @@ iree_td_library(
     name = "td_files",
     srcs = enforce_glob(
         [
+            "TensorExtAttrs.td",
             "TensorExtBase.td",
+            "TensorExtInterfaces.td",
             "TensorExtOps.td",
         ],
         include = ["*.td"],
@@ -34,21 +36,36 @@ iree_td_library(
 iree_compiler_cc_library(
     name = "IR",
     srcs = [
+        "TensorExtAttrInterfaces.cpp",
+        "TensorExtAttrInterfaces.cpp.inc",
+        "TensorExtAttrs.cpp",
+        "TensorExtAttrs.cpp.inc",
         "TensorExtDialect.cpp",
         "TensorExtDialect.cpp.inc",
         "TensorExtOpFolders.cpp",
+        "TensorExtOpInterfaces.cpp",
+        "TensorExtOpInterfaces.cpp.inc",
         "TensorExtOps.cpp",
         "TensorExtOps.cpp.inc",
         "TensorExtTypes.cpp",
     ],
     hdrs = [
+        "TensorExtAttrInterfaces.h",
+        "TensorExtAttrInterfaces.h.inc",
+        "TensorExtAttrs.h",
+        "TensorExtAttrs.h.inc",
         "TensorExtDialect.h",
         "TensorExtDialect.h.inc",
+        "TensorExtOpInterfaces.h",
+        "TensorExtOpInterfaces.h.inc",
         "TensorExtOps.h",
         "TensorExtOps.h.inc",
         "TensorExtTypes.h",
     ],
     deps = [
+        ":TensorExtAttrInterfacesGen",
+        ":TensorExtAttrsGen",
+        ":TensorExtOpInterfacesGen",
         ":TensorExtOpsGen",
         "//compiler/src/iree/compiler/Dialect/Util/IR",
         "//compiler/src/iree/compiler/Utils",
@@ -59,9 +76,67 @@ iree_compiler_cc_library(
         "@llvm-project//mlir:IR",
         "@llvm-project//mlir:InferTypeOpInterface",
         "@llvm-project//mlir:InliningUtils",
+        "@llvm-project//mlir:MemRefDialect",
         "@llvm-project//mlir:Support",
         "@llvm-project//mlir:TensorDialect",
     ],
+)
+
+iree_gentbl_cc_library(
+    name = "TensorExtAttrsGen",
+    tbl_outs = [
+        (
+            [
+                "--dialect=iree_tensor_ext",
+                "--gen-attrdef-decls",
+            ],
+            "TensorExtAttrs.h.inc",
+        ),
+        (
+            [
+                "--dialect=iree_tensor_ext",
+                "--gen-attrdef-defs",
+            ],
+            "TensorExtAttrs.cpp.inc",
+        ),
+    ],
+    tblgen = "@llvm-project//mlir:mlir-tblgen",
+    td_file = "TensorExtAttrs.td",
+    deps = [":td_files"],
+)
+
+iree_gentbl_cc_library(
+    name = "TensorExtAttrInterfacesGen",
+    tbl_outs = [
+        (
+            ["--gen-attr-interface-decls"],
+            "TensorExtAttrInterfaces.h.inc",
+        ),
+        (
+            ["--gen-attr-interface-defs"],
+            "TensorExtAttrInterfaces.cpp.inc",
+        ),
+    ],
+    tblgen = "@llvm-project//mlir:mlir-tblgen",
+    td_file = "TensorExtInterfaces.td",
+    deps = [":td_files"],
+)
+
+iree_gentbl_cc_library(
+    name = "TensorExtOpInterfacesGen",
+    tbl_outs = [
+        (
+            ["--gen-op-interface-decls"],
+            "TensorExtOpInterfaces.h.inc",
+        ),
+        (
+            ["--gen-op-interface-defs"],
+            "TensorExtOpInterfaces.cpp.inc",
+        ),
+    ],
+    tblgen = "@llvm-project//mlir:mlir-tblgen",
+    td_file = "TensorExtInterfaces.td",
+    deps = [":td_files"],
 )
 
 iree_gentbl_cc_library(
